--- a/plugins/stdout_gtestlike_tests_report/assets/template.erb
+++ b/plugins/stdout_gtestlike_tests_report/assets/template.erb
@@ -1,8 +1,7 @@
 % ignored        = hash[:results][:counts][:ignored]
 % failed         = hash[:results][:counts][:failed]
 % stdout_count   = hash[:results][:counts][:stdout]
-% header_prepend = ((hash[:header].length > 0) ? "#{hash[:header]}: " : '')
-% banner_width   = 25 + header_prepend.length # widest message
+% name_banner    = (" #{hash[:header]}" + (' ' * (9 - hash[:header].length)))[0..9]
 % results = {}
 % hash[:results][:successes].each do |testresult|
 %   results[ testresult[:source][:file] ] = testresult[:collection]
@@ -28,7 +27,8 @@
 %   end
 % end
 
-
+[==========]
+[<%=name_banner%>]
 [==========] Running <%=hash[:results][:counts][:total].to_s%> tests from <%=results.length.to_s%> test cases.
 [----------] Global test environment set-up.
 % results.each_pair do |modulename, moduledetails|
@@ -57,17 +57,16 @@
 [       OK ] <%=modulename%>.<%=item[:test]%> (0 ms)
 %     end
 %   end
-[----------] <%=moduledetails.length.to_s%> tests from <%=modulename%> (0 ms total)
+%   duration = ((hash[:results][:times][modulename]) * 1000.0).round(0)
+[----------] <%=moduledetails.length.to_s%> tests from <%=modulename%> (<%=duration%> ms total)
 % end
 
 % if (hash[:results][:counts][:total] > 0)
 [----------] Global test environment tear-down.
-[==========] <%=hash[:results][:counts][:total].to_s%> tests from <%=hash[:results][:stdout].length.to_s%> test cases ran.
+[==========] <%=hash[:results][:counts][:total].to_s%> tests from <%=results.length.to_s%> test cases ran.
 [  PASSED  ] <%=hash[:results][:counts][:passed].to_s%> tests.
 %   if (failed == 0)
 [  FAILED  ] 0 tests.
-
- 0 FAILED TESTS
 %   else
 [  FAILED  ] <%=failed.to_s%> tests, listed below:
 %     hash[:results][:failures].each do |failure|
