don't forget the ERB files.

--- a/plugins/bullseye/assets/template.erb
+++ b/plugins/bullseye/assets/template.erb
@@ -1,3 +1,10 @@
+# =========================================================================
+#   Ceedling - Test-Centered Build System for C
+#   ThrowTheSwitch.org
+#   Copyright (c) 2010-24 Mike Karlesky, Mark VanderVoord, & Greg Williams
+#   SPDX-License-Identifier: MIT
+# =========================================================================
+
 % function_string = hash[:coverage][:functions].to_s
 % branch_string   = hash[:coverage][:branches].to_s
 % format_string   = "%#{[function_string.length, branch_string.length].max}i"
