♻️ Added additional deocrators
- Broke out `decorate()` method in Loginator to support access to all decorators
- Updated banner and heading generation to calculate widths including Unicode characters
- Fixed logging statements.

--- a/plugins/report_tests_pretty_stdout/assets/template.erb
+++ b/plugins/report_tests_pretty_stdout/assets/template.erb
@@ -46,7 +46,8 @@
 % end
 % total_string = hash[:results][:counts][:total].to_s
 % format_string = "%#{total_string.length}i"
-<%=@ceedling[:plugin_reportinator].generate_banner(header_prepend + 'OVERALL TEST SUMMARY')%>
+% decorator = (failed > 0) ? LogLabels::FAIL : LogLabels::PASS
+<%=@ceedling[:plugin_reportinator].generate_banner(header_prepend + @loginator.decorate('OVERALL TEST SUMMARY', decorator))%>
 % if (hash[:results][:counts][:total] > 0)
 TESTED:  <%=hash[:results][:counts][:total].to_s%>
 PASSED:  <%=sprintf(format_string, hash[:results][:counts][:passed])%>
